fix: read subdomain labels by the same rules as the registrable label
The subdomain check and the brand-in-domain check answer one question -- "does
this name a brand?" -- about two positions in the same hostname, with two
different rules. The disagreement produced a false negative and a false
positive at the same time, both measured against the running app.

paypal-secure.evil.com scored 0. The subdomain check wanted a label to be
exactly "paypal", and the registrable-label check only ever looks at "evil", so
the more convincing of the two hostnames slipped past both. It is also the
cheaper attack: any host handing out wildcard subdomains gives it away without
registering a domain at all. It now scores 62, as paypal.evil.com already did.

ups.acme-logistics.com scored 62 -- "High risk", on a weight that convicts
alone. The subdomain check had no common-word rule, so any company with a ups.,
target. or outlook. subdomain was called hostile, while the identical word in a
registrable label was correctly ignored. It now scores 0, and
ups-tracking.evil.com still scores 62.

The matching rule is now one method both checks call, rather than two that can
drift again. Corroboration is searched across the whole subdomain, so
"ups.tracking.evil.com" reads the same as "ups-tracking.evil.com".